**** Changes ****

v2.2
----
 - fix: do not forget query string when redirecting!
 - fix: validation: unecessary user context re-creations avoided
 - added user context getter and setter to DBReference
 - configLoader should know FATAL error level, even if very unfrequent
 - Entity.fetch(Map) now checks for key values instead of throwing an exception if they are not present
 - added the missing EntityReference.newInstance(Map) method
 - fix: some methods of UserContext had to be synchronized
 - UserContext.getValidationErrors() now clears the validation errors for the next call
 - made login and passworf form field names configurable in AuthenticationFilter
 - added the getter BaseAuthenticator.getLoggedUser()
 - fix: web.VelosurfTool now avoid overwriting a previously thread-locally initialized user context in the database
 - removed all VelosurfTool methods taking an unused UserContext argument
 - made the LocalizationFilter less verbose
 - fix: SimpleDBLocalizer no longer throws an exception when the 'localized' table is not found

v2.1 (November 2006)
------
 - fix: bug in last insert id feature (at least for hsqldb, not for mysql)
 - added some new testcases
 - fix: template name filter cache resetting produced a wrong output
 - cleaned and reduced the use of ReadOnlyMap
 - fix: NPE in Entity.insert
 - simplified UserContext handling: now it is a thread-local member of sql.Database
 - fix: RowIterator behaviour is now ok for empty result sets with bugged JDBC drivers like HSQLDB
 - docfix: parameter 'config' was named 'configuration' in the documentation

v2.0 (November 2006)
----
 - full code review (field accesses, javadoc, unused methods)
 - added an ant/vpp example (thanks to Mike Kienenberger)
 - added a Logger.log2File(String file) method
 - changed the behaviour of the 'full' caching method.
 - aliases tag for column names
 - manual definition of imported and exported keys
 - optimized reflection code in ExternalObjectWrapper