@@ -1,5 +1,9 @@
 TODO
 ----
+ - when/how is $db.error cleared?
+ - review policy when column name clashes with attribute name: maybe add a RowIterator.internalGet called from ReadOnlyMap.
+   Plus, RowIterator get javadoc is wrong for now.
+ - testcase for exported key
  - when SQL exceptions are thrown from context objects, would it be possible to display line/col position in template?
  - clarify user context scope and life cycle
  - document newInstance(Map) and getLoggedUser
